made adjustment to false parsed data

--- a/data/markdown/91b4426b075560a1a45247f9cfa9fa73d56c945c/91b4426b075560a1a45247f9cfa9fa73d56c945c.md
+++ b/data/markdown/91b4426b075560a1a45247f9cfa9fa73d56c945c/91b4426b075560a1a45247f9cfa9fa73d56c945c.md
@@ -5,19 +5,19 @@
 应充分了解创业板市场的投资风险及本公司所披露的风险因素，审慎作出投资决定。
 
 
-# 广广州州中中海海达达卫卫星星导导航航技技术术股股份份有有限限公公司司
+# 广州中海达卫星导航技术股份有限公司
 
-## GGuuaannggzzhhoouu HHii--TTaarrggeett NNaavviiggaattiioonn TTeecchh CCoo..,, LLttdd..
+## Guangzhou Hi-Target Navigation Tech Co., Ltd.
 
 住住所所：广州市番禺区东环街迎宾路： 730 号番禺节能科技园内
 
 天安科技创新大厦 1003 号
 
-# 首首次次公公开开发发行行股股票票并并在在创创业业板板上上市市
+## 首次公开发行股票并在创业板上市
 
- 招招股股意意向向书书
+ 招股意向书
 
-### 保保荐荐人人（（主主承承销销商商））
+### 保荐人（主承销商））
 
 住所：深圳市红岭中路 1012 号国信证券大厦 16-26 层
 
