--- a/data/markdown/9dca16666143beb8c15a6a4ba6ec2b19b2ffb8fb/9dca16666143beb8c15a6a4ba6ec2b19b2ffb8fb.md
+++ b/data/markdown/9dca16666143beb8c15a6a4ba6ec2b19b2ffb8fb/9dca16666143beb8c15a6a4ba6ec2b19b2ffb8fb.md
@@ -1,8 +1,8 @@
 ![](9dca16666143beb8c15a6a4ba6ec2b19b2ffb8fb.PDF-0-1.png)
 
-# 内内内蒙蒙蒙古古古君君君正正正能能能源源源化化化工工工股股股份份份有有有限限限公公公司司司
+# 内蒙古君正能源化工股份有限公司
 
-##### [I]II[N]NN[N]NN[E]EE[R]RR [M]MM[O]OO[N]NN[G]GG[O]OO[L]LL[I]II[A]AA [J]JJ[U]UU[N]NN[Z]ZZ[H]HH[E]EE[N]NN[G]GG [E]EE[N]NN[E]EE[R]RR[G]GG[Y]YY [&]&& [C]CC[H]HH[E]EE[M]MM[I]II[C]CC[A]AA[L]LL [I]II[N]NN[D]DD[U]UU[S]SS[T]TT[R]RR[Y]YY [C]CC[O]OO[.]..[,],,[L]LL[T]TT[D]DD[.]..
+##### INNER MONGOLIA JUNZHENG ENERGY & CHEMICAL INDUSTRY CO.,LTD.
 
 ### （乌海市乌达工业园区）
 
@@ -15685,14 +15685,14 @@ EMBA&EDP
 520,000,000.00 3,029.27     - 0.00 140,312,956.13 12,990,116.51
 
                  - 295,666,483.93 5,155,025.47 7,402,907.38 -93,624,934.77 -159,249.66
-
+    
                  -                 -                 -                 - 210,501,406.50 -159,249.66
-
+    
                  - -1,056,949.96                 -                 -                 -                 
                  -                 -                 -                 -                 -                 
                  - -1,056,949.96                 -                 -                 -                 
                  - -1,056,949.96                 -                 - 210,501,406.50 -159,249.66
-
+    
                  -                 -                 -                 -                 -                 
                  -                 -                 -                 -                 -                 
                  -                 -                 - 7,402,907.38 -7,402,907.38                 
@@ -15763,18 +15763,18 @@ EMBA&EDP
 520,000,000.00 295,669,513.20 5,155,025.47 7,402,907.38 46,688,021.36 12,830,866.85
 
                - 15,783.32 870,515.56 25,615,112.02 127,989,704.52 22,453,896.12
-
+    
                -               -               -               - 153,604,816.54 -46,103.88
-
+    
                - 15,783.32 870,515.56               -               -               
                -               -               -               -               -               
                - 15,783.32 886,298.88               -               -               
 15,783.32 870,515.56               - 153,604,816.54 -46,103.88
 
                -               -               -               -               - 22,500,000.00
-
+    
                -               -               -               -               - 22,500,000.00
-
+    
                -               -               -               -               -               
                -               -               - 25,615,112.02 -25,615,112.02               
                -               -               - 25,615,112.02 -25,615,112.02               
@@ -16506,7 +16506,7 @@ EMBA&EDP
 
                          -                         -                         -                         
                          -                         - 25,615,112.02 -25,615,112.02
-
+    
                          -                         - 25,615,112.02 -25,615,112.02
 
 ．提取一般风险准备 - - - 
