--- a/testScript.ipynb
+++ b/testScript.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "from src.rag.embedding_generator import docs_parse,generate_embeddings\n",
+    "from src.rag.embedding_generator import docs_parse\n",
     "from src.rag.data_to_milvus import load_nodes_to_milvus\n",
     "from src.rag.data_to_milvus import create_milvus_collection, insert_embeddings_to_milvus\n",
     "from src.config import config\n",
