basic sql model(based on prompt) is ready

--- a/testScript.ipynb
+++ b/testScript.ipynb
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "from src.rag.embedding_generator import docs_parse\n",
+    "from rag.document_parse import docs_parse\n",
     "from src.rag.data_to_milvus import load_nodes_to_milvus\n",
     "from src.rag.data_to_milvus import create_milvus_collection, insert_embeddings_to_milvus\n",
     "from src.config import config\n",
