use prompt engineering enhanced SQL result

--- a/testScript.ipynb
+++ b/testScript.ipynb
@@ -482,17 +482,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "看起来SQL查询遇到了一些问题，可能是因为数据库中没有名为“元”的列。正确的查询应该直接使用列名“最高价(元)”而不需要进一步的别名操作来获取最大值。以下是修正后的SQL查询：\n",
-      "\n",
-      "```sql\n",
-      "SELECT 股票代码, MAX(`最高价(元)`) AS 最高价 \n",
-      "FROM `港股票日行情表` \n",
-      "GROUP BY 股票代码 \n",
-      "ORDER BY 最高价 DESC \n",
-      "LIMIT 1;\n",
-      "```\n",
-      "\n",
-      "这个查询会返回“港股票日行情表”中具有最高最高价的股票代码及其对应的最高价格。请确保数据库中的列名和表名正确无误，然后再执行此SQL语句。如果仍有问题，请提供具体的错误信息或进一步的信息以便于解决。\n"
+      "根据查询结果，在香港股票的日行情中，股票代码为09901的股票拥有最高的价格，其最高价为1588元。\n"
      ]
     }
    ],
@@ -500,6 +490,238 @@
     "query = \"港股票日行情中哪一个股票的最高价最高？\"\n",
     "res = query_engine.query(query)\n",
     "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT \"股票代码\", \"最高价(元)\" \n",
+      "FROM \"港股票日行情表\" \n",
+      "ORDER BY \"最高价(元)\" DESC \n",
+      "LIMIT 1;\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"港股票日行情中哪一个股票的最高价最高？\"\n",
+    "res = query_engine.query(query)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for key, value in (query_engine.get_prompts()).items():\n",
+    "#     print(\"=\"*10)\n",
+    "#     print(key+'\\n')\n",
+    "#     print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "response_synthesis_prompt\n",
+      "metadata {'prompt_type': <PromptType.SQL_RESPONSE_SYNTHESIS_V2: 'sql_response_synthesis_v2'>}\n",
+      "template_vars ['query_str', 'sql_query', 'context_str']\n",
+      "kwargs {}\n",
+      "output_parser None\n",
+      "template_var_mappings None\n",
+      "function_mappings None\n",
+      "template Given an input question, synthesize a response from the query results.\n",
+      "Query: {query_str}\n",
+      "SQL: {sql_query}\n",
+      "SQL Response: {context_str}\n",
+      "Response: \n",
+      "\n",
+      "\n",
+      "sql_retriever:text_to_sql_prompt\n",
+      "metadata {'prompt_type': <PromptType.TEXT_TO_SQL: 'text_to_sql'>}\n",
+      "template_vars ['dialect', 'schema', 'query_str']\n",
+      "kwargs {}\n",
+      "output_parser None\n",
+      "template_var_mappings None\n",
+      "function_mappings None\n",
+      "template Given an input question, first create a syntactically correct {dialect} query to run, then look at the results of the query and return the answer. You can order the results by a relevant column to return the most interesting examples in the database.\n",
+      "\n",
+      "Pay attention to use only the column names that you can see in the schema description. Be careful to not query for columns that do not exist. Pay attention to which column is in which table. Also, qualify column names with the table name when needed. \n",
+      "\n",
+      "IMPORTANT NOTE: make sure to enclose each column name in double quotes (\"\") pay attention to syntax and do not allow syntax errors.\n",
+      "\n",
+      "You are required to use the following format, each taking one line:\n",
+      "\n",
+      "Question: Question here\n",
+      "SQLQuery: SQL Query to run\n",
+      "SQLResult: Result of the SQLQuery\n",
+      "Answer: Final answer here\n",
+      "\n",
+      "Only use tables listed below.\n",
+      "{schema}\n",
+      "\n",
+      "\n",
+      "Question: {query_str}\n",
+      "SQLQuery: \n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in (query_engine.get_prompts()).items():\n",
+    "    print('\\n')\n",
+    "    print(key)\n",
+    "    for k, v in dict(value).items():\n",
+    "        print(k, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import json\n",
+    "# from llama_index.core.prompts.default_prompts import DEFAULT_TEXT_TO_SQL_PROMPT\n",
+    "# for key, value in dict(DEFAULT_TEXT_TO_SQL_PROMPT).items():\n",
+    "#     print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core.prompts.default_prompts import DEFAULT_TEXT_TO_SQL_PROMPT\n",
+    "from llama_index.core import PromptTemplate\n",
+    "from llama_index.core.prompts.prompt_type import PromptType\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "metadata {'prompt_type': <PromptType.TEXT_TO_SQL: 'text_to_sql'>}\n",
+      "template_vars ['dialect', 'schema', 'query_str']\n",
+      "kwargs {}\n",
+      "output_parser None\n",
+      "template_var_mappings None\n",
+      "function_mappings None\n",
+      "template Given an input question, first create a syntactically correct {dialect} query to run, then look at the results of the query and return the answer. You can order the results by a relevant column to return the most interesting examples in the database.\n",
+      "\n",
+      "Never query for all the columns from a specific table, only ask for a few relevant columns given the question.\n",
+      "\n",
+      "Pay attention to use only the column names that you can see in the schema description. Be careful to not query for columns that do not exist. Pay attention to which column is in which table. Also, qualify column names with the table name when needed. You are required to use the following format, each taking one line:\n",
+      "\n",
+      "Question: Question here\n",
+      "SQLQuery: SQL Query to run\n",
+      "SQLResult: Result of the SQLQuery\n",
+      "Answer: Final answer here\n",
+      "\n",
+      "Only use tables listed below.\n",
+      "{schema}\n",
+      "\n",
+      "Question: {query_str}\n",
+      "SQLQuery: \n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in dict(DEFAULT_TEXT_TO_SQL_PROMPT).items():\n",
+    "    print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.prompt.text_to_sql_template import get_prompt\n",
+    "t2sql_template = get_prompt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_to_sql_template = PromptTemplate(\n",
+    "    t2sql_template,\n",
+    "    prompt_type=PromptType.TEXT_TO_SQL,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "metadata {'prompt_type': <PromptType.TEXT_TO_SQL: 'text_to_sql'>}\n",
+      "template_vars ['dialect', 'schema', 'query_str']\n",
+      "kwargs {}\n",
+      "output_parser None\n",
+      "template_var_mappings None\n",
+      "function_mappings None\n",
+      "template Given an input question, first create a syntactically correct {dialect} query to run, then look at the results of the query and return the answer. You can order the results by a relevant column to return the most interesting examples in the database.\n",
+      "\n",
+      "Pay attention to use only the column names that you can see in the schema description. Be careful to not query for columns that do not exist. Pay attention to which column is in which table. Also, qualify column names with the table name when needed. \n",
+      "\n",
+      "IMPORTANT NOTE: you can use specialized pgvector syntax (`<->`) to do nearest neighbors/semantic search to a given vector from an embeddings column in the table. The embeddings value for a given row typically represents the semantic meaning of that row. The vector represents an embedding representation of the question, given below. Do NOT fill in the vector values directly, but rather specify a `[query_vector]` placeholder. For instance, some select statement examples below (the name of the embeddings column is `embedding`):\n",
+      "SELECT * FROM items ORDER BY embedding <-> '[query_vector]' LIMIT 5;\n",
+      "SELECT * FROM items WHERE id != 1 ORDER BY embedding <-> (SELECT embedding FROM items WHERE id = 1) LIMIT 5;\n",
+      "SELECT * FROM items WHERE embedding <-> '[query_vector]' < 5;\n",
+      "\n",
+      "You are required to use the following format, each taking one line:\n",
+      "\n",
+      "Question: Question here\n",
+      "SQLQuery: SQL Query to run\n",
+      "SQLResult: Result of the SQLQuery\n",
+      "Answer: Final answer here\n",
+      "\n",
+      "Only use tables listed below.\n",
+      "{schema}\n",
+      "\n",
+      "\n",
+      "Question: {query_str}\n",
+      "SQLQuery: \n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in dict(text_to_sql_template).items():\n",
+    "    print(key, value)"
    ]
   },
   {
@@ -541,14 +763,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'response': {'response': '看起来SQL查询中存在一些问题，尤其是关于列名的表示方式和使用的引号。根据给出的信息，修正后的SQL查询应该是这样的：\\n\\n```sql\\nSELECT 股票代码, MAX(最高价) AS 最高价格\\nFROM `港股票日行情表`\\nGROUP BY 股票代码\\nORDER BY 最高价格 DESC\\nLIMIT 1;\\n```\\n\\n这个修正过的查询语句将会返回在“港股票日行情表”中，哪支股票的日最高价是最高的。以下是可能的响应内容：\\n\\n```\\n+-----------+---------+\\n| 股票代码   | 最高价格 |\\n+-----------+---------+\\n| 0001.HK   | 365.80  |\\n+-----------+---------+\\n```\\n\\n请注意，实际返回的结果会根据具体的股票数据有所不同。这里的示例结果显示最高价的股票代码是“0001.HK”，且最高价格为365.80元。', 'source_nodes': [{'node': {'id_': 'c35f9231-bb32-4345-aca0-525076587160', 'embedding': None, 'extra_info': {}, 'excluded_embed_metadata_keys': [], 'excluded_llm_metadata_keys': [], 'relationships': {}, 'text': \"Error: Statement 'SELECT 股票代码, MAX(最高价(元)) AS 最高价格\\\\nFROM `港股票日行情表`\\\\nGROUP BY 股票代码\\\\nORDER BY 最高价格 DESC\\\\nLIMIT 1;' is invalid SQL.\\nError: no such column: 元\", 'mimetype': 'text/plain', 'start_char_idx': None, 'end_char_idx': None, 'text_template': '{metadata_str}\\n\\n{content}', 'metadata_template': '{key}: {value}', 'metadata_seperator': '\\n', 'class_name': 'TextNode'}, 'score': None, 'class_name': 'NodeWithScore'}], 'metadata': {'c35f9231-bb32-4345-aca0-525076587160': {}, 'sql_query': 'SELECT 股票代码, MAX(最高价(元)) AS 最高价格\\nFROM `港股票日行情表`\\nGROUP BY 股票代码\\nORDER BY 最高价格 DESC\\nLIMIT 1;'}}, 'status': 200, 'time': '2024-11-20 16:12:52'}\n"
+     "ename": "NameError",
+     "evalue": "name 'requests' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# test sql\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m sql_response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mpost(base_url \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/sql\u001b[39m\u001b[38;5;124m\"\u001b[39m, json\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquery\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m港股票日行情中哪一个股票的最高价最高？\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(sql_response\u001b[38;5;241m.\u001b[39mjson())\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'requests' is not defined"
      ]
     }
    ],
