prompted based NER and CLS

--- a/testScript.ipynb
+++ b/testScript.ipynb
@@ -601,6 +601,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.cls_ner.cls_ner import get_query_engine\n",
+    "\n",
+    "query_engine = get_query_engine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QuestionType: SQL查询\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = query_engine.query(\"港股票日行情中哪一个股票的最高价最高？\")\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QuestionType: 文本理解\n",
+      "Company: 中国铁路通信信号有限公司\n",
+      "Keywords: 发行前每股净资产为多少\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = query_engine.query(\"中国铁路通信信号有限公司发行前每股净资产为多少？\")\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QuestionType: 混合查询\n",
+      "Company: 中国铁路通信信号有限公司\n",
+      "Keywords: 发行前每股净资产, 发行后股价最高价格及日期\n",
+      "TextQueryForSQL: 在“A股票日行情表”中找到发行前的记录，计算每股净资产；在“A股票日行情表”中找出发行后的所有交易日，并确定哪一天的收盘价最高。\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = query_engine.query(\"中国铁路通信信号有限公司发行前每股净资产为多少？发行后哪一天它的股价最高？\")\n",
+    "print(res)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -733,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,14 +814,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'response': {'response': '中国铁路通信信号有限公司在发行前（以2018年、2017年和2016年的数据为准）的每股净资产分别为3.29元、2.73元和2.46元。', 'source_nodes': [{'node': {'id_': 'a9df9d69-4200-4e19-8f38-9818c413dca5', 'embedding': None, 'extra_info': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第二节 概 览', 'Header_5': '三、发行人报告期主要财务数据和财务指标'}, 'excluded_embed_metadata_keys': [], 'excluded_llm_metadata_keys': [], 'relationships': {'1': {'node_id': 'b5edb28b-9afa-4653-a904-ced4fe9b6495', 'node_type': '4', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md'}, 'hash': '14b8dbb4b11ec4c7c00e1076e5dbeaa77d164380c76a8a277f81b9b13533489a', 'class_name': 'RelatedNodeInfo'}, '2': {'node_id': '9990f677-8217-4bda-89c8-6290be7ef10f', 'node_type': '1', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第二节 概 览', 'Header_5': '二、本次发行概况'}, 'hash': '644dd21437a189ccc1b41253b927337cb24f8a5fc2768e8cd4c7a6aaac7ad13f', 'class_name': 'RelatedNodeInfo'}, '3': {'node_id': 'a547bea7-6fb1-405d-9984-c7dc71dcd0ef', 'node_type': '1', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第二节 概 览', 'Header_5': '四、发行人主营业务经营情况'}, 'hash': 'e8a9c69b9ffe1c3c8dab747c4ccf39974c6ed7e2bce82ed366f48b2c238fbca7', 'class_name': 'RelatedNodeInfo'}}, 'text': '三、发行人报告期主要财务数据和财务指标\\n\\n**2018 年** **12 月** **31 日** **2017 年** **12 月** **31 日** **2016 年** **12 月** **31 日**\\n项目\\n\\n**/2018 年度** **/2017 年度** **/2016 年度**\\n\\n资产总额（万元） 7,967,853.76 6,124,464.46 5,029,500.66\\n\\n归属于母公司所有者\\n2,890,839.67 2,401,905.09 2,165,663.79\\n权益（万元）\\n\\n资产负债率（母公司）\\n44.78 50.03 46.91\\n（%）\\n\\n营业收入（万元） 4,001,260.13 3,458,593.36 2,977,019.66\\n\\n净利润（万元） 371,679.53 343,719.43 319,848.19\\n\\n归属于母公司所有者\\n340,854.55 322,248.36 304,500.03\\n的净利润（万元）\\n\\n扣除非经常性损益后\\n归属于母公司所有者 329,519.07 309,181.56 283,468.31\\n的净利润\\n\\n基本每股收益（元） 0.38 0.37 0.35\\n\\n稀释每股收益（元） 0.38 0.37 0.35\\n\\n加权平均净资产收益\\n13.58 14.09 15.03\\n率（%）\\n\\n经营活动产生的现金\\n-158,678.99 -88,601.84 293,505.77\\n流量净额（万元）\\n\\n现金分红（万元） 131,847.29 87,898.19 21,974.55\\n\\n研发投入占营业收入\\n3.45 3.41 3.53\\n的比例（%）', 'mimetype': 'text/plain', 'start_char_idx': 38972, 'end_char_idx': 39679, 'text_template': '{metadata_str}\\n\\n{content}', 'metadata_template': '{key}: {value}', 'metadata_seperator': '\\n', 'class_name': 'TextNode'}, 'score': 0.7587858438491821, 'class_name': 'NodeWithScore'}, {'node': {'id_': 'cf24631d-cf4e-422d-99ef-76b174699e61', 'embedding': None, 'extra_info': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第八节 财务会计信息与管理层分析', 'Header_5': '十一、发行人主要财务指标'}, 'excluded_embed_metadata_keys': [], 'excluded_llm_metadata_keys': [], 'relationships': {'1': {'node_id': 'b5edb28b-9afa-4653-a904-ced4fe9b6495', 'node_type': '4', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md'}, 'hash': '14b8dbb4b11ec4c7c00e1076e5dbeaa77d164380c76a8a277f81b9b13533489a', 'class_name': 'RelatedNodeInfo'}, '2': {'node_id': '121b34fb-db2a-4766-a5d3-25ca1cd8c2f8', 'node_type': '1', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第八节 财务会计信息与管理层分析', 'Header_5': '十、非经常性损益对公司盈利的影响'}, 'hash': '7e5de35bf89bfbeac0963318fa8dcc180eb38fa0e722f25bfede6c19c09e97dd', 'class_name': 'RelatedNodeInfo'}, '3': {'node_id': '99a1194a-f394-496d-90d1-6438f9544e0d', 'node_type': '1', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第八节 财务会计信息与管理层分析', 'Header_5': '十二、盈利预测披露情况'}, 'hash': '4e32dcc7aa0a1b4dff5e50030476b49a684f7fb99c0b406866c47cfc8b688eda', 'class_name': 'RelatedNodeInfo'}}, 'text': '十一、发行人主要财务指标\\n\\n（一）基本财务指标\\n\\n**2018 年** **2017 年** **2016 年**\\n项目\\n\\n**12 月** **31 日** **12 月** **31 日** **12 月** **31 日**\\n\\n流动比率（倍） 1.37 1.42 1.57\\n\\n速动比率（倍） 0.64 0.81 1.09\\n\\n资产负债率 62.01% 58.81% 54.89%\\n\\n项目 **2018 年度** **2017 年度** **2016 年度**\\n\\n息税折旧摊销前利润（万元） 519,046.96 477,469.88 436,276.40\\n\\n归属于母公司股东的净利润（万元） 340,854.55 322,248.36 304,500.03\\n\\n归属于母公司股东扣除非经常性损\\n329,519.07 309,181.56 283,468.31\\n益后的净利润（万元）\\n\\n应收账款周转率（次） 3.26 3.40 3.56\\n\\n存货周转率（次） 1.10 1.55 2.07\\n\\n研发投入占比营业收入的比例 3.45% 3.41% 3.53%\\n\\n每股经营活动的现金流量（元） -0.18 -0.10 0.33\\n\\n每股净现金流量（元） -0.06 -0.32 0.32\\n\\n归属于母公司股东的每股净资产\\n3.29 2.73 2.46\\n（元）\\n\\n上述财务指标以本公司合并财务报表的数据为基础计算，计算公式如下：\\n\\n1、流动比率＝流动资产/流动负债\\n\\n2、速动比率＝（流动资产-存货-合同资产）/流动负债\\n\\n3、资产负债率＝总负债/总资产×100%\\n\\n4、息税折旧摊销前利润＝利润总额＋利息支出+折旧和摊销\\n\\n5、应收账款周转率＝营业收入/应收账款年度平均净额\\n\\n515\\n\\n|项目|2018 年度|2017 年度|2016 年度|\\n|---|---|---|---|\\n|非经常性损益净影响额|11,335.48|13,066.80|21,031.73|\\n|归属于母公司股东扣除非经常性损益后的净 利润|329,519.07|309,181.56|283,468.31|\\n\\n|项目|2018 年 12 月31 日|2017 年 12 月31 日|2016 年 12 月31 日|\\n|---|---|---|---|\\n|流动比率（倍）|1.37|1.42|1.57|\\n|速动比率（倍）|0.64|0.81|1.09|\\n|资产负债率|62.01%|58.81%|54.89%|\\n|项目|2018 年度|2017 年度|2016 年度|\\n|息税折旧摊销前利润（万元）|519,046.96|477,469.88|436,276.40|\\n|归属于母公司股东的净利润（万元）|340,854.55|322,248.36|304,500.03|\\n|归属于母公司股东扣除非经常性损 益后的净利润（万元）|329,519.07|309,181.56|283,468.31|\\n|应收账款周转率（次）|3.26|3.40|3.56|\\n|存货周转率（次）|1.10|1.55|2.07|\\n|研发投入占比营业收入的比例|3.45%|3.41%|3.53%|\\n|每股经营活动的现金流量（元）|-0.18|-0.10|0.33|\\n|每股净现金流量（元）|-0.06|-0.32|0.32|\\n|归属于母公司股东的每股净资产 （元）|3.29|2.73|2.46|\\n\\n\\n-----\\n\\n中国铁路通信信号股份有限公司 招股意向书\\n\\n6、存货周转率＝营业成本/（存货年度平均净额+合同资产年度平均净额）\\n\\n7、研发投入占比营业收入的比例＝（费用化的研发费用+资本化的开发支出）\\n\\n/营业收入\\n\\n8、每股经营活动产生的现金流量＝经营活动产生的现金流量净额/期末股本\\n\\n总额\\n\\n9、每股净现金流量＝现金及现金等价物净增加额/期末股本总额\\n\\n10、归属于母公司股东的每股净资产＝归属于母公司股东的净资产/期末股\\n\\n本总额\\n\\n（二）净资产收益率和每股收益\\n\\n根据中国证监会《公开发行证券公司信息披露编报规则第 9 号——净资产收\\n\\n益率和每股收益的计算及披露（2010 年修订）》，报告期内本公司的净资产收益\\n\\n率和每股收益如下：\\n\\n加权平均净资 每股收益（元/股）\\n报告期利润 报告期\\n\\n产收益率（%） 基本每股收益 稀释每股收益\\n\\n2018 年度 13.58 0.38 0.38\\n\\n归属于母公司股东的\\n\\n2017 年度 14.09 0.37 0.37\\n\\n净利润\\n\\n2016 年度 15.03 0.35 0.35\\n\\n2018 年度 13.13 0.37 0.37\\n\\n扣除非经常性损益后\\n归属于母公司股东的 2017 年度 13.52 0.35 0.35\\n\\n净利润\\n\\n2016 年度 13.99 0.32 0.32\\n\\n基本每股收益按照归属于本公司母公司股东的当期净利润，除以发行在外普\\n\\n通股的加权平均数计算。\\n\\n稀释每股收益的分子以归属于本公司母公司股东的当期净利润，调整下述因\\n\\n素后确定：（1）当期已确认为费用的稀释性潜在普通股的利息；（2）稀释性潜在\\n\\n普通股转换时将产生的收益或费用；以及（3）上述调整相关的所得税影响。\\n\\n稀释每股收益的分母等于下列两项之和：（1）基本每股收益中母公司已发行\\n\\n普通股的加权平均数；及（2）假定稀释性潜在普通股转换为普通股而增加的普\\n\\n通股的加权平均数。\\n\\n516\\n\\n|报告期利润|报告期|加权平均净资 产收益率（%）|每股收益（元/股）|Col5|\\n|---|---|---|---|---|\\n||||基本每股收益|稀释每股收益|\\n|归属于母公司股东的 净利润|2018 年度|13.58|0.38|0.38|\\n||2017 年度|14.09|0.37|0.37|\\n||2016 年度|15.03|0.35|0.35|\\n|扣除非经常性损益后 归属于母公司股东的 净利润|2018 年度|13.13|0.37|0.37|\\n||2017 年度|13.52|0.35|0.35|\\n||2016 年度|13.99|0.32|0.32|\\n\\n\\n-----\\n\\n中国铁路通信信号股份有限公司 招股意向书\\n\\n在计算稀释性潜在普通股转换为已发行普通股而增加的普通股股数的加权\\n\\n平均数时，以前期间发行的稀释性潜在普通股，假设在当期期初转换；当期发行\\n\\n的稀释性潜在普通股，假设在发行日转换。', 'mimetype': 'text/plain', 'start_char_idx': 734243, 'end_char_idx': 736878, 'text_template': '{metadata_str}\\n\\n{content}', 'metadata_template': '{key}: {value}', 'metadata_seperator': '\\n', 'class_name': 'TextNode'}, 'score': 0.7446815967559814, 'class_name': 'NodeWithScore'}], 'metadata': None}, 'status': 200, 'time': '2024-11-20 15:49:21'}\n"
+      "{'response': {'response': '中国铁路通信信号有限公司在发行前的每股净资产分别为：2016年12月31日为2.46元，2017年12月31日为2.73元，以及2018年12月31日为3.29元。', 'source_nodes': [{'node': {'id_': 'a9df9d69-4200-4e19-8f38-9818c413dca5', 'embedding': None, 'extra_info': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第二节 概 览', 'Header_5': '三、发行人报告期主要财务数据和财务指标'}, 'excluded_embed_metadata_keys': [], 'excluded_llm_metadata_keys': [], 'relationships': {'1': {'node_id': 'b5edb28b-9afa-4653-a904-ced4fe9b6495', 'node_type': '4', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md'}, 'hash': '14b8dbb4b11ec4c7c00e1076e5dbeaa77d164380c76a8a277f81b9b13533489a', 'class_name': 'RelatedNodeInfo'}, '2': {'node_id': '9990f677-8217-4bda-89c8-6290be7ef10f', 'node_type': '1', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第二节 概 览', 'Header_5': '二、本次发行概况'}, 'hash': '644dd21437a189ccc1b41253b927337cb24f8a5fc2768e8cd4c7a6aaac7ad13f', 'class_name': 'RelatedNodeInfo'}, '3': {'node_id': 'a547bea7-6fb1-405d-9984-c7dc71dcd0ef', 'node_type': '1', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第二节 概 览', 'Header_5': '四、发行人主营业务经营情况'}, 'hash': 'e8a9c69b9ffe1c3c8dab747c4ccf39974c6ed7e2bce82ed366f48b2c238fbca7', 'class_name': 'RelatedNodeInfo'}}, 'text': '三、发行人报告期主要财务数据和财务指标\\n\\n**2018 年** **12 月** **31 日** **2017 年** **12 月** **31 日** **2016 年** **12 月** **31 日**\\n项目\\n\\n**/2018 年度** **/2017 年度** **/2016 年度**\\n\\n资产总额（万元） 7,967,853.76 6,124,464.46 5,029,500.66\\n\\n归属于母公司所有者\\n2,890,839.67 2,401,905.09 2,165,663.79\\n权益（万元）\\n\\n资产负债率（母公司）\\n44.78 50.03 46.91\\n（%）\\n\\n营业收入（万元） 4,001,260.13 3,458,593.36 2,977,019.66\\n\\n净利润（万元） 371,679.53 343,719.43 319,848.19\\n\\n归属于母公司所有者\\n340,854.55 322,248.36 304,500.03\\n的净利润（万元）\\n\\n扣除非经常性损益后\\n归属于母公司所有者 329,519.07 309,181.56 283,468.31\\n的净利润\\n\\n基本每股收益（元） 0.38 0.37 0.35\\n\\n稀释每股收益（元） 0.38 0.37 0.35\\n\\n加权平均净资产收益\\n13.58 14.09 15.03\\n率（%）\\n\\n经营活动产生的现金\\n-158,678.99 -88,601.84 293,505.77\\n流量净额（万元）\\n\\n现金分红（万元） 131,847.29 87,898.19 21,974.55\\n\\n研发投入占营业收入\\n3.45 3.41 3.53\\n的比例（%）', 'mimetype': 'text/plain', 'start_char_idx': 38972, 'end_char_idx': 39679, 'text_template': '{metadata_str}\\n\\n{content}', 'metadata_template': '{key}: {value}', 'metadata_seperator': '\\n', 'class_name': 'TextNode'}, 'score': 0.7587858438491821, 'class_name': 'NodeWithScore'}, {'node': {'id_': 'cf24631d-cf4e-422d-99ef-76b174699e61', 'embedding': None, 'extra_info': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第八节 财务会计信息与管理层分析', 'Header_5': '十一、发行人主要财务指标'}, 'excluded_embed_metadata_keys': [], 'excluded_llm_metadata_keys': [], 'relationships': {'1': {'node_id': 'b5edb28b-9afa-4653-a904-ced4fe9b6495', 'node_type': '4', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md'}, 'hash': '14b8dbb4b11ec4c7c00e1076e5dbeaa77d164380c76a8a277f81b9b13533489a', 'class_name': 'RelatedNodeInfo'}, '2': {'node_id': '121b34fb-db2a-4766-a5d3-25ca1cd8c2f8', 'node_type': '1', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第八节 财务会计信息与管理层分析', 'Header_5': '十、非经常性损益对公司盈利的影响'}, 'hash': '7e5de35bf89bfbeac0963318fa8dcc180eb38fa0e722f25bfede6c19c09e97dd', 'class_name': 'RelatedNodeInfo'}, '3': {'node_id': '99a1194a-f394-496d-90d1-6438f9544e0d', 'node_type': '1', 'metadata': {'filename': '4170a3382f5e92d32890780d79cb39115a756f40.md', 'extension': '.md', 'Header_1': '中国铁路通信信号股份有限公司', 'Header_2': '首次公开发行股票并在科创板上市', 'Header_3': '第八节 财务会计信息与管理层分析', 'Header_5': '十二、盈利预测披露情况'}, 'hash': '4e32dcc7aa0a1b4dff5e50030476b49a684f7fb99c0b406866c47cfc8b688eda', 'class_name': 'RelatedNodeInfo'}}, 'text': '十一、发行人主要财务指标\\n\\n（一）基本财务指标\\n\\n**2018 年** **2017 年** **2016 年**\\n项目\\n\\n**12 月** **31 日** **12 月** **31 日** **12 月** **31 日**\\n\\n流动比率（倍） 1.37 1.42 1.57\\n\\n速动比率（倍） 0.64 0.81 1.09\\n\\n资产负债率 62.01% 58.81% 54.89%\\n\\n项目 **2018 年度** **2017 年度** **2016 年度**\\n\\n息税折旧摊销前利润（万元） 519,046.96 477,469.88 436,276.40\\n\\n归属于母公司股东的净利润（万元） 340,854.55 322,248.36 304,500.03\\n\\n归属于母公司股东扣除非经常性损\\n329,519.07 309,181.56 283,468.31\\n益后的净利润（万元）\\n\\n应收账款周转率（次） 3.26 3.40 3.56\\n\\n存货周转率（次） 1.10 1.55 2.07\\n\\n研发投入占比营业收入的比例 3.45% 3.41% 3.53%\\n\\n每股经营活动的现金流量（元） -0.18 -0.10 0.33\\n\\n每股净现金流量（元） -0.06 -0.32 0.32\\n\\n归属于母公司股东的每股净资产\\n3.29 2.73 2.46\\n（元）\\n\\n上述财务指标以本公司合并财务报表的数据为基础计算，计算公式如下：\\n\\n1、流动比率＝流动资产/流动负债\\n\\n2、速动比率＝（流动资产-存货-合同资产）/流动负债\\n\\n3、资产负债率＝总负债/总资产×100%\\n\\n4、息税折旧摊销前利润＝利润总额＋利息支出+折旧和摊销\\n\\n5、应收账款周转率＝营业收入/应收账款年度平均净额\\n\\n515\\n\\n|项目|2018 年度|2017 年度|2016 年度|\\n|---|---|---|---|\\n|非经常性损益净影响额|11,335.48|13,066.80|21,031.73|\\n|归属于母公司股东扣除非经常性损益后的净 利润|329,519.07|309,181.56|283,468.31|\\n\\n|项目|2018 年 12 月31 日|2017 年 12 月31 日|2016 年 12 月31 日|\\n|---|---|---|---|\\n|流动比率（倍）|1.37|1.42|1.57|\\n|速动比率（倍）|0.64|0.81|1.09|\\n|资产负债率|62.01%|58.81%|54.89%|\\n|项目|2018 年度|2017 年度|2016 年度|\\n|息税折旧摊销前利润（万元）|519,046.96|477,469.88|436,276.40|\\n|归属于母公司股东的净利润（万元）|340,854.55|322,248.36|304,500.03|\\n|归属于母公司股东扣除非经常性损 益后的净利润（万元）|329,519.07|309,181.56|283,468.31|\\n|应收账款周转率（次）|3.26|3.40|3.56|\\n|存货周转率（次）|1.10|1.55|2.07|\\n|研发投入占比营业收入的比例|3.45%|3.41%|3.53%|\\n|每股经营活动的现金流量（元）|-0.18|-0.10|0.33|\\n|每股净现金流量（元）|-0.06|-0.32|0.32|\\n|归属于母公司股东的每股净资产 （元）|3.29|2.73|2.46|\\n\\n\\n-----\\n\\n中国铁路通信信号股份有限公司 招股意向书\\n\\n6、存货周转率＝营业成本/（存货年度平均净额+合同资产年度平均净额）\\n\\n7、研发投入占比营业收入的比例＝（费用化的研发费用+资本化的开发支出）\\n\\n/营业收入\\n\\n8、每股经营活动产生的现金流量＝经营活动产生的现金流量净额/期末股本\\n\\n总额\\n\\n9、每股净现金流量＝现金及现金等价物净增加额/期末股本总额\\n\\n10、归属于母公司股东的每股净资产＝归属于母公司股东的净资产/期末股\\n\\n本总额\\n\\n（二）净资产收益率和每股收益\\n\\n根据中国证监会《公开发行证券公司信息披露编报规则第 9 号——净资产收\\n\\n益率和每股收益的计算及披露（2010 年修订）》，报告期内本公司的净资产收益\\n\\n率和每股收益如下：\\n\\n加权平均净资 每股收益（元/股）\\n报告期利润 报告期\\n\\n产收益率（%） 基本每股收益 稀释每股收益\\n\\n2018 年度 13.58 0.38 0.38\\n\\n归属于母公司股东的\\n\\n2017 年度 14.09 0.37 0.37\\n\\n净利润\\n\\n2016 年度 15.03 0.35 0.35\\n\\n2018 年度 13.13 0.37 0.37\\n\\n扣除非经常性损益后\\n归属于母公司股东的 2017 年度 13.52 0.35 0.35\\n\\n净利润\\n\\n2016 年度 13.99 0.32 0.32\\n\\n基本每股收益按照归属于本公司母公司股东的当期净利润，除以发行在外普\\n\\n通股的加权平均数计算。\\n\\n稀释每股收益的分子以归属于本公司母公司股东的当期净利润，调整下述因\\n\\n素后确定：（1）当期已确认为费用的稀释性潜在普通股的利息；（2）稀释性潜在\\n\\n普通股转换时将产生的收益或费用；以及（3）上述调整相关的所得税影响。\\n\\n稀释每股收益的分母等于下列两项之和：（1）基本每股收益中母公司已发行\\n\\n普通股的加权平均数；及（2）假定稀释性潜在普通股转换为普通股而增加的普\\n\\n通股的加权平均数。\\n\\n516\\n\\n|报告期利润|报告期|加权平均净资 产收益率（%）|每股收益（元/股）|Col5|\\n|---|---|---|---|---|\\n||||基本每股收益|稀释每股收益|\\n|归属于母公司股东的 净利润|2018 年度|13.58|0.38|0.38|\\n||2017 年度|14.09|0.37|0.37|\\n||2016 年度|15.03|0.35|0.35|\\n|扣除非经常性损益后 归属于母公司股东的 净利润|2018 年度|13.13|0.37|0.37|\\n||2017 年度|13.52|0.35|0.35|\\n||2016 年度|13.99|0.32|0.32|\\n\\n\\n-----\\n\\n中国铁路通信信号股份有限公司 招股意向书\\n\\n在计算稀释性潜在普通股转换为已发行普通股而增加的普通股股数的加权\\n\\n平均数时，以前期间发行的稀释性潜在普通股，假设在当期期初转换；当期发行\\n\\n的稀释性潜在普通股，假设在发行日转换。', 'mimetype': 'text/plain', 'start_char_idx': 734243, 'end_char_idx': 736878, 'text_template': '{metadata_str}\\n\\n{content}', 'metadata_template': '{key}: {value}', 'metadata_seperator': '\\n', 'class_name': 'TextNode'}, 'score': 0.7446815967559814, 'class_name': 'NodeWithScore'}], 'metadata': None}, 'status': 200, 'time': '2024-11-20 21:27:01'}\n"
      ]
     }
    ],
@@ -763,18 +833,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'requests' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# test sql\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m sql_response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mpost(base_url \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/sql\u001b[39m\u001b[38;5;124m\"\u001b[39m, json\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquery\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m港股票日行情中哪一个股票的最高价最高？\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(sql_response\u001b[38;5;241m.\u001b[39mjson())\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'requests' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'response': {'response': '根据查询结果，在香港股票的日行情中，股票代码为09901的股票拥有最高的当日最高价，为1588元。', 'source_nodes': [{'node': {'id_': '341a800d-5b71-48d4-8f04-a9cfccad4dfe', 'embedding': None, 'extra_info': {'sql_query': 'SELECT \"股票代码\", \"最高价(元)\" FROM \"港股票日行情表\" ORDER BY \"最高价(元)\" DESC LIMIT 1;', 'result': [['09901', 1588.0]], 'col_keys': ['股票代码', '最高价(元)']}, 'excluded_embed_metadata_keys': ['sql_query', 'result', 'col_keys'], 'excluded_llm_metadata_keys': ['sql_query', 'result', 'col_keys'], 'relationships': {}, 'text': \"[('09901', 1588.0)]\", 'mimetype': 'text/plain', 'start_char_idx': None, 'end_char_idx': None, 'text_template': '{metadata_str}\\n\\n{content}', 'metadata_template': '{key}: {value}', 'metadata_seperator': '\\n', 'class_name': 'TextNode'}, 'score': None, 'class_name': 'NodeWithScore'}], 'metadata': {'341a800d-5b71-48d4-8f04-a9cfccad4dfe': {'sql_query': 'SELECT \"股票代码\", \"最高价(元)\" FROM \"港股票日行情表\" ORDER BY \"最高价(元)\" DESC LIMIT 1;', 'result': [['09901', 1588.0]], 'col_keys': ['股票代码', '最高价(元)']}, 'sql_query': 'SELECT \"股票代码\", \"最高价(元)\" FROM \"港股票日行情表\" ORDER BY \"最高价(元)\" DESC LIMIT 1;', 'result': [['09901', 1588.0]], 'col_keys': ['股票代码', '最高价(元)']}}, 'status': 200, 'time': '2024-11-20 21:27:17'}\n"
      ]
     }
    ],
