pipeline is ready

--- a/testScript.ipynb
+++ b/testScript.ipynb
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,21 +852,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'response': {'text': 'QuestionType: 文本理解\\nCompany: 中国铁路通信信号有限公司\\nKeywords: 发行前每股净资产为多少', 'additional_kwargs': {'tool_calls': []}, 'raw': {'model': 'qwen2.5', 'created_at': '2024-11-20T18:15:03.73207Z', 'message': {'role': 'assistant', 'content': 'QuestionType: 文本理解\\nCompany: 中国铁路通信信号有限公司\\nKeywords: 发行前每股净资产为多少'}, 'done_reason': 'stop', 'done': True, 'total_duration': 10672784125, 'load_duration': 2834529792, 'prompt_eval_count': 1398, 'prompt_eval_duration': 6618323000, 'eval_count': 26, 'eval_duration': 1190634000, 'usage': {'prompt_tokens': 1398, 'completion_tokens': 26, 'total_tokens': 1424}}, 'logprobs': None, 'delta': None}, 'status': 200, 'time': '2024-11-21 02:15:03'}\n"
+      "QuestionType: 文本理解\n",
+      "Company: 中国铁路通信信号有限公司\n",
+      "Keywords: 发行前每股净资产\n"
      ]
     }
    ],
    "source": [
     "# test ner\n",
-    "ner_response = requests.post(base_url + \"/ner\", json={\"query\": \"中国铁路通信信号有限公司发行前每股净资产为多少？\"})\n",
-    "print(ner_response.json())"
+    "ner_response = requests.post(base_url + \"/ner\", json={\"query\": \"中国铁路通信信号有限公司发行前每股净资产为多少？\"}).json().get(\"response\")\n",
+    "print(ner_response[\"text\"])"
    ]
   },
   {
